--- a/css/styles.css
+++ b/css/styles.css
@@ -733,6 +733,77 @@ bottom: 0;
     background-color: var(--accent-color);
 }
 
+.footer-form {
+    margin-left: auto;
+    max-width: 570px;
+    width: 100%;
+}
+
+.form-title {
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.1428;
+    text-transform: uppercase;
+    color: var(--primary-white-color);
+    margin-bottom: 20px;
+}
+
+.footer-form-email {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    align-items: center;
+}
+
+.form-email {
+    /*щоб розтягнути на ширину в макеті*/
+    display: block;
+    width: 100%;
+    max-width: 358px;
+}
+
+.form-email input {
+    padding: 15px 16px;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    outline: none;
+    width: 100%;
+    color: var(--primary-white-color);
+}
+
+.form-email::placeholder {
+    font-family: 'Roboto';
+    font-size: 16px;
+    line-height: 1.25;
+    color: var(--footer-link-color);
+}
+
+.footer-button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 28px;
+    min-width: 200px;
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    color: var(--primary-white-color);
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+}
+
+.icon-send {
+    fill: var(--primary-white-color);
+}
+
 
 
 
