--- a/css/styles.css
+++ b/css/styles.css
@@ -414,9 +414,9 @@ li{
 }
 
 
-.feat .featli{
+/* .feat .featli{
     margin-right: 30px;
-}
+} */
 .feat .featli:last-child{
     margin-right: 0;
 }
@@ -608,7 +608,7 @@ bottom: 0;
 }
 
 .client-icon {
-    fill: currentColor;
+    fill: #AFB1B8;
     padding: 7px;
     transition: fill 250ms var(--timing-function);
 }
@@ -675,9 +675,13 @@ bottom: 0;
 .footer-box .footer-social {
     margin-left: 70px;
 }
+
+.page-footer{
+    padding: 70px 0;
+}
 .foter-main {
     display: flex;
-    padding: 70px 0;
+    /* padding: 70px 0; */
     gap: 70px;
     align-items: baseline;
 }
@@ -706,20 +710,6 @@ bottom: 0;
     fill: var(--primary-white-color);
 }
 
-.footer-item{
-    color: var(--primary-white-color);
-    display: flex;
-    justify-content: center;
-   align-items: center;
-   width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    text-decoration: none;
-    background-color: rgba(255, 255, 255, 0.1);
-    margin-bottom: 20px;
-    transition: color 2000ms var(--timing-function);
-
-}
 
 .footer-link {
     display: flex;
@@ -731,77 +721,6 @@ bottom: 0;
 .team-icon-link.footer-link:hover,
 .team-icon-link.footer-link:focus {
     background-color: var(--accent-color);
-}
-
-.footer-form {
-    margin-left: auto;
-    max-width: 570px;
-    width: 100%;
-}
-
-.form-title {
-    font-family: 'Roboto';
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.1428;
-    text-transform: uppercase;
-    color: var(--primary-white-color);
-    margin-bottom: 20px;
-}
-
-.footer-form-email {
-    display: flex;
-    gap: 10px;
-    width: 100%;
-    align-items: center;
-}
-
-.form-email {
-    /*щоб розтягнути на ширину в макеті*/
-    display: block;
-    width: 100%;
-    max-width: 358px;
-}
-
-.form-email input {
-    padding: 15px 16px;
-    background-color: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    outline: none;
-    width: 100%;
-    color: var(--primary-white-color);
-}
-
-.form-email::placeholder {
-    font-family: 'Roboto';
-    font-size: 16px;
-    line-height: 1.25;
-    color: var(--footer-link-color);
-}
-
-.footer-button {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px 28px;
-    min-width: 200px;
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-    color: var(--primary-white-color);
-    font-family: 'Roboto';
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    cursor: pointer;
-}
-
-.icon-send {
-    fill: var(--primary-white-color);
 }
 
 
@@ -831,7 +750,9 @@ bottom: 0;
      border: none;
      border-radius: 4px;
     font-family: inherit;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter:hover,
