--- a/css/styles.css
+++ b/css/styles.css
@@ -1019,3 +1019,179 @@ bottom: 0;
 .close-modal:focus {
     border-color: var(--accent-color);
 }
+.group-row {
+    width: 100%;
+}
+
+.group-row:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.form-row-title:not(:last-child) {
+    margin-bottom: 4px;
+}
+
+.form-row-title {
+    font-family: 'Roboto';
+    font-size: 12px;
+    line-height: 1.1667;
+    letter-spacing: 0.01em;
+    color: var(--primary-text-color);
+}
+
+.form-row-input {
+    width: 100%;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    outline: none;
+    min-height: 40px;
+    height: 100%;
+    padding: 12px 15px 12px 42px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+}
+.group-modal {
+    position: relative;
+}
+.modal-title{
+    text-align: center;
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+}
+.modal-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+
+    transform: translateY(-50%);
+    fill: var(--black-color);
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-row-textarea:hover,
+.form-row-textarea:focus,
+.form-row-input:focus,
+.form-row-input:hover {
+    border-color: var(--accent-color);
+}
+
+.form-row-input:focus+.modal-icon,
+.form-row-input:hover+.modal-icon {
+    fill: var(--accent-color);
+}
+
+/*textarea*/
+.group-row-textarea:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.form-row-textarea {
+    width: 100%;
+    min-height: 120px;
+    height: 100%;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px 16px;
+    outline: none;
+    cursor: pointer;
+    resize: none;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-row-textarea::placeholder {
+    font-family: 'Roboto';
+    font-size: 12px;
+    line-height: 1.66;
+    letter-spacing: 0.01em;
+    color:rgba(117, 117, 117, 0.5);
+}
+
+/*checkbox*/
+.group-row-checkbox:not(:last-child) {
+    margin-bottom: 33px;
+
+}
+
+.group-row-checkbox {
+    width: 100%;
+}
+
+.form-label-checkbox {
+    font-family: 'Roboto';
+    font-size: 14px;
+    line-height: 1.71;
+    color: var(--primary-text-colorr);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 7px;
+    align-items: center;
+   
+}
+
+.form-input-checkbox {
+    -webkit-appearence: none;
+    -moz--appearence: none;
+    appearance: none;
+    position: absolute;
+
+}
+
+.form-icon-checkbox {
+    display: inline-flex;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--primary-text-color);
+    border-radius: 2px;
+
+    transition: background-image, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-link-checkbox {
+    color: var(--accent-color);
+    text-decoration: underline;
+}
+
+.form-input-checkbox:checked+.form-icon-checkbox {
+    /*щоб клік відпрацьовував*/
+    background-color: var(--accent-color);
+    background-image: url(../images/iconimag/check.svg);
+    background-size: contain;
+    background-position: center;
+    border-color: var(--accent-color);
+    background-origin: border-box;
+}
+
+/*button*/
+.group-row-button {
+    display: flex;
+    justify-content: center;
+
+    align-items: center;
+}
+
+.button-submit {
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--primary-white-color);
+    padding: 10px 52px;
+
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+
+}
