--- a/css/styles.css
+++ b/css/styles.css
@@ -984,7 +984,7 @@ bottom: 0;
     padding: 40px;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: visible;
     position: relative;
     transition-timing-function: 250ms  var(--timing-function); 
 }
@@ -1019,8 +1019,15 @@ bottom: 0;
 .close-modal:focus {
     border-color: var(--accent-color);
 }
+.modal-form {
+    /* max-width: 448px; */
+    width: 100%;
+    margin: 0 ;
+}
+
 .group-row {
     width: 100%;
+    margin: 0 0;
 }
 
 .group-row:not(:last-child) {
@@ -1028,6 +1035,7 @@ bottom: 0;
 }
 
 .form-row-title:not(:last-child) {
+    display: block;
     margin-bottom: 4px;
 }
 
@@ -1037,6 +1045,7 @@ bottom: 0;
     line-height: 1.1667;
     letter-spacing: 0.01em;
     color: var(--primary-text-color);
+    /* margin: 12px; */
 }
 
 .form-row-input {
@@ -1050,18 +1059,22 @@ bottom: 0;
     padding: 12px 15px 12px 42px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
+    margin: 0 0;
 }
 .group-modal {
     position: relative;
+    margin: 0;
 }
 .modal-title{
     text-align: center;
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.17;
+    line-height: 1.15;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
+    margin-bottom: 12px;
+   
 }
 .modal-icon {
     position: absolute;
@@ -1072,6 +1085,7 @@ bottom: 0;
     fill: var(--black-color);
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0;
 }
 
 .form-row-textarea:hover,
@@ -1086,10 +1100,8 @@ bottom: 0;
     fill: var(--accent-color);
 }
 
-/*textarea*/
-.group-row-textarea:not(:last-child) {
-    margin-bottom: 10px;
-}
+
+
 
 .form-row-textarea {
     width: 100%;
@@ -1101,6 +1113,7 @@ bottom: 0;
     outline: none;
     cursor: pointer;
     resize: none;
+    margin-bottom: 20px;
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1165,17 +1178,17 @@ bottom: 0;
     background-color: var(--accent-color);
     background-image: url(../images/iconimag/check.svg);
     background-size: contain;
-    background-position: center;
     border-color: var(--accent-color);
-    background-origin: border-box;
+     background-origin: border-box;
+    background-position: center;
+   
 }
 
 /*button*/
 .group-row-button {
     display: flex;
-    justify-content: center;
-
     align-items: center;
+    justify-content: center;
 }
 
 .button-submit {
@@ -1187,11 +1200,14 @@ bottom: 0;
     letter-spacing: 0.06em;
     color: var(--primary-white-color);
     padding: 10px 52px;
-
     background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
     cursor: pointer;
+    margin-bottom: 40px;
+     transition-property: background-color;
+     transition-duration: 250ms;
+     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
