--- a/css/styles.css
+++ b/css/styles.css
@@ -967,7 +967,7 @@ bottom: 0;
 
 
 .backdrop.is-hidden {
-    visibility: hidden;
+    /* visibility: hidden; */
     opacity: 0;
     pointer-events: none;
     /* transform: scale(0.8); */
@@ -1022,12 +1022,10 @@ bottom: 0;
 .modal-form {
     /* max-width: 448px; */
     width: 100%;
-    margin: 0 ;
 }
 
 .group-row {
     width: 100%;
-    margin: 0 0;
 }
 
 .group-row:not(:last-child) {
@@ -1100,7 +1098,10 @@ bottom: 0;
     fill: var(--accent-color);
 }
 
-
+.group-row-textarea{
+    display: block;
+    /* margin-bottom: 20px; */
+}
 
 
 .form-row-textarea {
@@ -1113,7 +1114,7 @@ bottom: 0;
     outline: none;
     cursor: pointer;
     resize: none;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1127,13 +1128,14 @@ bottom: 0;
 }
 
 /*checkbox*/
-.group-row-checkbox:not(:last-child) {
+/* .group-row-checkbox:not(:last-child) {
     margin-bottom: 33px;
 
-}
+} */
 
 .group-row-checkbox {
     width: 100%;
+    
 }
 
 .form-label-checkbox {
@@ -1189,6 +1191,7 @@ bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 .button-submit {
@@ -1203,11 +1206,12 @@ bottom: 0;
     background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    margin-top: 30px;
     border: none;
     cursor: pointer;
-    margin-bottom: 40px;
      transition-property: background-color;
      transition-duration: 250ms;
      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+
